<resources>
    <string name="app_name">Super Wolf Firebase</string>
    <string name="skip">SKIP</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="super_wolf">SUPER WOLF</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_account">Create account</string>
    <string name="register">REGISTER</string>
    <string name="name">NAME</string>
    <string name="name2">NAME:</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="play">PLAY</string>
    <string name="gender">GENDER</string>
    <string name="female">FEMALE</string>
    <string name="confirm">Confirm</string>
    <string name="set_up_your_profile">Set up your profile</string>
    <string name="profile">PROFILE</string>
    <string name="setting">SETTING</string>
    <string name="friends">FRIENDS</string>
    <string name="about">ABOUT</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="logout">LOGOUT</string>
    <string name="change_name">CHANGE NAME</string>
    <string name="update">UPDATE</string>
    <string name="change_gender">CHANGE GENDER</string>
    <string name="add">+</string>
    <string name="room_name">ROOM NAME</string>
    <string name="_6_9">6/9</string>
    <string name="_1">1</string>
    <string name="_00_00">00</string>
    <string name="message">MESSAGE</string>
    <string name="type_your_message">Type your message</string>
    <string name="days">DAYS:</string>
    <string name="night">NIGHT:</string>
    <string name="you_have_no_more_heal_potion">You have no more Heal Potion</string>
    <string name="continue_">continue</string>
    <string name="exit">exit</string>
</resources>