<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterActivity">




    <TextView
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/doublefeature"
        android:text="@string/super_wolf"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/werewolf"
        android:layout_marginTop="110dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/relativelayout_background"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_name"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/name"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:paddingStart="12dp"
            android:fontFamily="@font/octobernight"
            android:drawablePadding="3dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            tools:ignore="RtlSymmetry"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_email"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/et_name"
        android:textSize="18sp"
        android:paddingStart="12dp"
        android:fontFamily="@font/octobernight"
        android:drawablePadding="3dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />
    <EditText
        android:paddingStart="12dp"
        android:id="@+id/et_password"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/et_email"
        android:textSize="18sp"
        android:fontFamily="@font/octobernight"
        android:drawablePadding="3dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        tools:ignore="RtlSymmetry"
        android:autofillHints=""
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_register"
        android:text="@string/register"
        android:fontFamily="@font/octobernight"
        android:textSize="18sp"
        android:background="@drawable/custom_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_register"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/octobernight"
                android:text="@string/already_have_an_account"
                android:textSize="18sp" />


        </LinearLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>