<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/soft_pink"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cloudcomputing"
        android:layout_marginTop="110dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/doublefeature"
        android:text="@string/super_wolf"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />


    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/relativelayout_background"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:paddingStart="12dp"
            android:fontFamily="@font/octobernight"
            android:drawablePadding="3dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="" />
        <EditText
            android:paddingStart="12dp"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/et_email"
            android:textSize="18sp"
            android:fontFamily="@font/octobernight"
            android:drawablePadding="3dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_login"
            android:text="@string/login"
            android:fontFamily="@font/octobernight"
            android:textSize="18sp"
            android:background="@drawable/custom_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_login"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/create_account"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/octobernight"
                android:text="@string/create_account"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/octobernight"
                android:text="@string/forgot_password"
                android:textSize="18sp" />


        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout">

        <ImageView
            android:id="@+id/facebook"
            android:layout_marginEnd="20dp"
            android:src="@drawable/facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <ImageView
            android:id="@+id/google"
            android:layout_marginStart="20dp"
            android:src="@drawable/google"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_loading"
        android:visibility="invisible"
        android:background="@color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ProgressBar
            android:indeterminate="true"
            android:indeterminateTint="@color/black"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>