<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/soft_pink"
    tools:context=".views.mainscreen.activities.SetUpProfileActivity">


    <TextView
        android:id="@+id/setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/octobernight"
        android:gravity="center"
        android:text="@string/set_up_your_profile"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/relativelayout_background"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setup">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher_round" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/topic"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/dark_pink"
        app:cursorColor="@color/dark_pink"
        app:endIconTint="@color/dark_pink"
        app:hintTextColor="@color/dark_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll1">

        <AutoCompleteTextView
            android:id="@+id/option_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/octobernight"
            android:gravity="center"
            android:hint="@string/gender"
            android:inputType="none"
            android:textColorHint="@color/dark_pink" />


    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/et_setup_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_input2"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="3dp"
        android:fontFamily="@font/octobernight"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topic"
        tools:ignore="RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/et_setup_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_input2"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="3dp"
        android:fontFamily="@font/octobernight"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_setup_email"
        tools:ignore="RtlSymmetry" />



    <TextView
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/relativelayout_background"
        android:fontFamily="@font/octobernight"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_setup_email" />


    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/black" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>